# hk

./: CHANGELOG.md  Cargo.toml  hk-example.pkl  hk.pkl  hk.usage.kdl
docs/: builtins.md  configuration.md  getting_started.md  mise_integration.md  pkl_introduction.md
docs/cli/: commands.json  index.md  util.md
docs/cli/util/: end-of-file-fixer.md  fix-smart-quotes.md  mixed-line-ending.md  trailing-whitespace.md
docs/public/: custom-linters.pkl  javascript-project.pkl  monorepo.pkl  python-project.pkl
docs/reference/examples/: custom-linters.md  javascript-project.md  monorepo.md  python-project.md
src/: config.rs
src/cli/: init.rs
